# Seminar_RLDMUU_AI_agents_contracts

./: .gitignore  README.md  agent.py  agent_qlearn.py  inner_optimization.ipynb  main.py  meta_algorithm.ipynb  meta_vs_qlear.ipynb  outer_optimization.ipynb  principal.py  principal_agent_mdp.py  principal_agent_mdp_environment.py  principal_isa.py  principal_meta.py  principals_learning.ipynb.ipynb  pyproject.toml  qlearning_algo.ipynb  training_loop.ipynb
algorithm_comparison/: deepq_network.py  meta_vs_dq.ipynb  meta_vs_qlear.ipynb  meta_vs_qlearning.py  principal_agent_mdp.py
algorithm_comparison/meta/: agent_meta.py  principal_meta.py
algorithm_comparison/qlearn/: agent_qlearn.py  principal_qlearn.py
report/Seminar_RLDMUU_2026/: example_paper.bib  main.tex
step1_meta_algo/: agent.py  meta_algorithm.ipynb  principal_meta.py
step2_meta_qlearn/: principal.py  principal_isa.py  principal_qlearn.py  qlearning_algo.ipynb
step3_dq_learning/: agent_dq.py  deeoq_network.py  deepq_learning.ipynb  principal_dq.py  principals_dq.py
step4_linear_contracts/: comparison.py  principal_qlinear.py  run_comparison.ipynb
